--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <!-- ============ HERO SECTION ============ -->
     <section id="home" class="hero">
         <div class="hero-text">
-
             <!-- LOGO ABOVE THE BIG TITLE -->
             <img src="logo.png" alt="barnoosko logo" class="hero-logo">
 
@@ -34,12 +33,11 @@
             <p>Your path to a better job starts here.</p>
 
             <div class="hero-buttons">
-                <!-- send user to jobs section -->
                 <a href="#comics" class="btn primary">View Jobs</a>
                 <a href="#join" class="btn secondary">Join the Community</a>
             </div>
 
-            <!-- HERO IMAGE PLACED UNDER BUTTONS -->
+            <!-- HERO IMAGE UNDER BUTTONS -->
             <img src="job-banner (2).png"
                  alt="Barnoosko Job Banner"
                  class="hero-banner"
@@ -74,7 +72,7 @@
             <article class="card">
                 <div class="card-image">
                     <div class="card-placeholder">
-                        <img src="nightshift.jpg" alt="Night Shift Legends Cover" class="card-img">
+                        <img src="nightshift.jpg" alt="Full-time Job" class="card-img">
                     </div>
                 </div>
                 <div class="card-body">
@@ -93,7 +91,7 @@
             <article class="card">
                 <div class="card-image">
                     <div class="card-placeholder">
-                        <img src="barnoosko-crew.jpg" alt="Barnoosko Crew Cover" class="card-img">
+                        <img src="barnoosko-crew.jpg" alt="Part-time Job" class="card-img">
                     </div>
                 </div>
                 <div class="card-body">
@@ -112,7 +110,7 @@
             <article class="card">
                 <div class="card-image">
                     <div class="card-placeholder">
-                        <img src="job-cover.jpg" alt="Job Cover" class="card-img">
+                        <img src="job-cover.jpg" alt="Night-shift Job" class="card-img">
                     </div>
                 </div>
                 <div class="card-body">
@@ -155,7 +153,7 @@
 
             <button type="submit" class="btn primary full-width">Send</button>
 
-            <!-- NEW: status message -->
+            <!-- status message -->
             <p id="form-status" class="form-status" aria-live="polite"></p>
         </form>
 
@@ -174,35 +172,29 @@
 </div>
 
 <script>
-    // set current year in footer (if span exists)
+    // set current year
     const yearSpan = document.getElementById('year');
     if (yearSpan) {
         yearSpan.textContent = new Date().getFullYear();
     }
 
-    // show message when form is "sent"
+    // ===== CONTACT FORM → GOOGLE FORM =====
     const form = document.getElementById('contact-form');
-    const status = document.getElementById('form-status');
+    const statusText = document.getElementById('form-status');
+    const GOOGLE_FORM_URL = 'https://forms.gle/pvEsQGGEsYh51j1X7';
 
     form.addEventListener('submit', function (e) {
-        e.preventDefault(); // no real submit yet
+        e.preventDefault(); // stop normal submit
 
-        // here you could later send data to a server / Google Sheet / etc.
+        // show confirmation
+        statusText.textContent = 'Thank you! You will be redirected to the contact form.';
 
-        // show confirmation message
-        status.textContent = 'Thank you! Your message has been sent.';
+        // open your Google Form in a new tab
+        window.open(GOOGLE_FORM_URL, '_blank');
 
-        // clear inputs
+        // clear the local fields
         form.reset();
     });
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
