--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <!-- ============ FOOTER ============ -->
     <footer class="site-footer">
-        <p>© <span id="year"></span> Barnoosko</p>
+        <p> <span id=""></span> Barnoosko</p>
     </footer>
 
 </div>
@@ -199,4 +199,5 @@
 </script>
 </body>
 </html>
+
 
