Add QR codes and contact information to index.html
Updated the contact section to include QR codes and contact information for YumeMart.

--- a/index.html
+++ b/index.html
@@ -130,40 +130,64 @@
     </section>
 
     <!-- ============ JOIN / CONTACT SECTION ============ -->
-    <section id="join" class="section join-section">
-        <h2>barnoosko community</h2>
-        <p class="section-intro">
-            Want to read early, collaborate, or just say hi? Send us a message.
+    <!-- ============ CONTACT SECTION ============ -->
+<section id="join" class="section contact-section">
+
+    <!-- QR CODES -->
+    <div class="qr-container">
+        <div class="qr-box">
+            <img src="yumemart-qr.png" alt="YumeMart QR">
+            <span>YumeMart</span>
+        </div>
+
+        <div class="qr-box">
+            <img src="fastners-qr.png" alt="Fastners QR">
+            <span>Fastners</span>
+        </div>
+    </div>
+
+    <!-- CONTACT CARD -->
+    
+    <div class="contact-card">
+        <h2>Contact Us | تواصل معنا</h2>
+
+        <p class="contact-item">
+            📧
+            <a href="mailto:info@yumemart.com">
+                info@yumemart.com
+            </a>
         </p>
 
-        <form class="contact-form" id="contact-form">
-            <div class="form-row">
-                <label for="name">Name</label>
-                <input id="name" type="text" placeholder="Your name">
-            </div>
+        <p class="contact-item">
+            📞
+            <a href="tel:+97339922917">+973 39922917</a>
+            -
+            <a href="tel:+97317799986">17799986</a>
+        </p>
 
-            <div class="form-row">
-                <label for="email">Email</label>
-                <input id="email" type="email" placeholder="you@example.com">
-            </div>
+        <p class="contact-item">
+            📍 SHOP: 1738B, ROAD: 1332, BLOCK: 713, TUBLI
+        </p>
 
-            <div class="form-row">
-                <label for="message">Message</label>
-                <textarea id="message" rows="4" placeholder="Tell us about you or your idea"></textarea>
-            </div>
+        <!-- WHATSAPP BUTTON -->
+        <a href="https://wa.me/97339922917"
+           target="_blank"
+           class="whatsapp-btn">
+            💬 Chat on WhatsApp
+        </a>
+    </div>
 
-            <button type="submit" class="btn primary full-width">Send</button>
+    <!-- GOOGLE MAP -->
+    <div class="map-container">
+        <iframe
+            src="https://www.google.com/maps?q=Tubli+Bahrain&output=embed"
+            allowfullscreen=""
+            loading="lazy">
+        </iframe>
+    </div>
 
-            <!-- status message -->
-            <p id="form-status" class="form-status" aria-live="polite"></p>
-        </form>
+</section>
 
-        <div class="contact-extra">
-            <p>Or contact us directly:</p>
-            <p><strong>Email:</strong> hello@barnoosko.com</p>
-            <p><strong>Instagram:</strong> @barnoosko</p>
-        </div>
-    </section>
 
     <!-- ============ FOOTER ============ -->
     <footer class="site-footer">
@@ -199,5 +223,6 @@
 </script>
 </body>
 </html>
+
 
 
