--- a/index.html
+++ b/index.html
@@ -130,58 +130,40 @@
     </section>
 
     <!-- ============ JOIN / CONTACT SECTION ============ -->
-    <!-- ============ CONTACT SECTION ============ -->
-<section id="join" class="section contact-section">
+    <section id="join" class="section join-section">
+        <h2>barnoosko community</h2>
+        <p class="section-intro">
+            Want to read early, collaborate, or just say hi? Send us a message.
+        </p>
 
-    <!-- QR CODES -->
-    <div class="qr-container">
-        <div class="qr-box">
-            <img src="yumemart-qr.png" alt="YumeMart QR">
-            <span>YumeMart</span>
+        <form class="contact-form" id="contact-form">
+            <div class="form-row">
+                <label for="name">Name</label>
+                <input id="name" type="text" placeholder="Your name">
+            </div>
+
+            <div class="form-row">
+                <label for="email">Email</label>
+                <input id="email" type="email" placeholder="you@example.com">
+            </div>
+
+            <div class="form-row">
+                <label for="message">Message</label>
+                <textarea id="message" rows="4" placeholder="Tell us about you or your idea"></textarea>
+            </div>
+
+            <button type="submit" class="btn primary full-width">Send</button>
+
+            <!-- status message -->
+            <p id="form-status" class="form-status" aria-live="polite"></p>
+        </form>
+
+        <div class="contact-extra">
+            <p>Or contact us directly:</p>
+            <p><strong>Email:</strong> hello@barnoosko.com</p>
+            <p><strong>Instagram:</strong> @barnoosko</p>
         </div>
-
-        <div class="qr-box">
-            <img src="fastners-qr.png" alt="Fastners QR">
-            <span>Fastners</span>
-        </div>
-    </div>
-
-    <!-- CONTACT CARD -->
-    
-    <div class="contact-card">
-        <h2>Contact Us | تواصل معنا</h2>
-
-        <p class="contact-item">
-            📧
-            <a href="mailto:info@yumemart.com">
-                info@yumemart.com
-            </a>
-        </p>
-
-        <p class="contact-item">
-            📞
-            <a href="tel:+97339922917">+973 39922917</a>
-            -
-            <a href="tel:+97317799986">17799986</a>
-        </p>
-
-        <p class="contact-item">
-            📍 SHOP: 1738B, ROAD: 1332, BLOCK: 713, TUBLI
-        </p>
-
-        <!-- WHATSAPP BUTTON -->
-        <a href="https://wa.me/97339922917"
-           target="_blank"
-           class="whatsapp-btn">
-            💬 Chat on WhatsApp
-        </a>
-    </div>
-
-    <!-- GOOGLE MAP -->
-    
-
-</section>
-
+    </section>
 
     <!-- ============ FOOTER ============ -->
     <footer class="site-footer">
@@ -217,6 +199,5 @@
 </script>
 </body>
 </html>
-
 
 
